1.4
  - updated for libldap 2.2
  - cygwin works
  - fixed bogus modify operation when moving an entry without changing its rdn
  - new command line option -R
  - workaround for Microsoft ROOT DSE oddity: need * instead of +

1.3 2005-11-13 r33
  * last release to support (and require) libldap 2.1
  - in ldap_delete, treat notAllowedOnNonLeaf as non-fatal, allowing
    subtrees to be deleted in incorrect order
  - check for empty DNs later, so that search results including the
    ROOT DSE do not lead to a parse error anymore
  - for syntax errors, try to open the editor near the error position.
    (This assumes support for the +N argument vi and emacs understand.)
  - new command line argument --config: print basic LDAP library parameters
    to standard output for easy .ldaprc setup
  - new command line argument --discover: as an alternative to --base,
    query the ROOT DSE for all namingContexts and repeat searching in
    all contexts automatically
  - new command line argument --class: specify objectclasses at the
    command line that are looked up and inserted as a template

1.2 2004-07-07 r18 (patch-17)
  - fixed segfault: allow deletions to be skipped
    (thanks to Gerfried Fuchs for the bug report)
  - MD5 hashes are stored in crypt()-format, so prepend {CRYPT}, not {MD5}

1.1 2004-01-27 r9 (patch-8)
  - fixed compare() bugs involving fastcmp()
    (thanks to Bernardo Innocenti for the bug report)
  - fixed deleteoldrdn in LDIF output
  - new option --diff
  - tests, some comments

1.0 2004-01-01 r1 (base-0)
  initial release